Menu alignment fix.

--- a/style.less
+++ b/style.less
@@ -740,6 +740,7 @@ body.responsive {
 	margin: 0 -35px;
 	background: #343538;
 	position: relative;
+	font-size: 0;
 
 	/* Font awesome icons */
 	[class^="fa fa-"] {
@@ -755,7 +756,6 @@ body.responsive {
 	}
 
 	ul {
-		display: flex;
 		text-align: left;
 		list-style: none;
 		margin: 0;
